tree-sitter-wax/grammar.js
    source_file: $ => repeat($._module_item),

    _module_item: $ => choice(
      $._module_field,
      ';',
    ),

    // ---------------------------------------------------------------------
    // Lexical layer
    // ---------------------------------------------------------------------

    // (XID_Start | _) XID_Continue*  with apostrophe allowed in continue
    // position (lexer.ml's `ident`). A lone `_` is UNDERSCORE, handled elsewhere.
    identifier: $ =>
      /[\p{XID_Start}][\p{XID_Continue}']*|_[\p{XID_Continue}']+/u,

    // Decimal or 0x-hex, with `_` digit separators (lexer.ml's `int`). No sign.
    // The hex prefix is lowercase `0x` only, as in the lexer (`0X10` is not a
    // literal); the exponent markers below do accept either case.
    integer_literal: $ => token(choice(
      /[0-9](_?[0-9])*/,
      /0x[0-9a-fA-F](_?[0-9a-fA-F])*/,
    )),

    // decfloat | hexfloat | nan:0x… (lexer.ml's `float`).
    float_literal: $ => {
      const dec = /[0-9](_?[0-9])*/;
      const hex = /[0-9a-fA-F](_?[0-9a-fA-F])*/;
      const decExp = /[eE][+-]?[0-9](_?[0-9])*/;
      const hexExp = /[pP][+-]?[0-9](_?[0-9])*/;
      return token(choice(
        // num ('.' num?)? exp   |   num '.' num?
        seq(dec, choice(
          seq(optional(seq('.', optional(dec))), decExp),
          seq('.', optional(dec)),
        )),
        // 0x hexnum ('.' hexnum?)? pexp   |   0x hexnum '.' hexnum?
        seq(/0x/, hex, choice(
          seq(optional(seq('.', optional(hex))), hexExp),
          seq('.', optional(hex)),
        )),
        seq(/nan:0x/, hex),
      ));
    },

    string_literal: $ => seq(
      '"',
      repeat(choice(
        token.immediate(prec(1, /[^"\\\x00-\x1f\x7f]+/)),
        $.escape_sequence,
      )),
      '"',
    ),

    // A single atomic token (like the sedlex lexer), so `'a'` competes as one
    // 3-char token against the 1-char label quote and wins by longest match —
    // while `'foo` (no closing quote) fails here and falls through to a label.
    // The unescaped character class excludes `"` (and not `'`), exactly as the
    // lexer does: `'''` is the apostrophe, `'"'` must be written `'\"'`.
    char_literal: $ => token(seq(
      "'",
      choice(
        /[^"\\\x00-\x1f\x7f]/,
        /\\[tnr'"\\]/,
        /\\x[0-9a-fA-F][0-9a-fA-F]/,
        /\\u\{[0-9a-fA-F](_?[0-9a-fA-F])*\}/,
      ),
      "'",
    )),

    escape_sequence: $ => token.immediate(choice(
      /\\[tnr'"\\]/,
      /\\x[0-9a-fA-F][0-9a-fA-F]/,
      /\\u\{[0-9a-fA-F](_?[0-9a-fA-F])*\}/,
    )),

    line_comment: $ => token(seq('//', /[^\r\n]*/)),

    // A `'` followed by an identifier or keyword (parser.mly's `label`). Kept at
    // the grammar level (not a single token) so `'a'` still lexes as a char.
    label: $ => seq("'", field('name', $._label_name)),

    _label_name: $ => choice($.identifier, ...KEYWORDS),

    // ---------------------------------------------------------------------
    // Types
    // ---------------------------------------------------------------------

    _value_type: $ => choice(
      $.reference_type,
      $.primitive_type,
    ),

    // i32/i64/f32/f64/v128 (value), i8/i16 (storage). Also the abstract heap
    // and cast names — all plain identifiers, distinguished in queries.
    primitive_type: $ => $.identifier,

    // & ?? !? heap_type   (parser.mly's `reference_type`)
    reference_type: $ => seq(
      '&',
      optional(field('nullable', '?')),
      optional(field('exact', '!')),
      field('heap', $._heap_type),
    ),

    _heap_type: $ => choice('cont', alias($.identifier, $.type_identifier)),

    _type_name: $ => alias($.identifier, $.type_identifier),

    // cast_type (parser.mly's `cast_type`): a value/cast name, a reference type, or
    // `& ?? fn functype`.
    _cast_type: $ => choice(
      $.primitive_type,
      $.reference_type,
      seq('&', optional('?'), 'fn', $.function_type),
    ),

    // ( params ) (-> results)?   (parser.mly's `function_type`)
    parameter_list: $ => seq(
      '(',
      sepByTrailing(',', $.parameter),
      ')',
    ),

    parameter: $ => choice(
      seq(field('name', $.identifier), ':', field('type', $._value_type)),
      field('type', $._value_type),
    ),

    struct_type: $ => seq(
      '{',
      choice(
        '..',
        seq('..', ',', sepByTrailing(',', $.struct_type_field)),
        sepByTrailing(',', $.struct_type_field),
      ),
      '}',
    ),

    struct_type_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.field_type),
    ),

    field_type: $ => seq(
      optional('mut'),
      field('type', $._storage_type),
    ),

    _storage_type: $ => choice($.reference_type, $.primitive_type),

    array_type: $ => seq('[', $.field_type, ']'),

    _composite_type: $ => choice(
      $.struct_type,
      seq('fn', $.function_type),
      $.array_type,
      seq('cont', field('type', $._type_name)),
    ),

    // type name (: super)? = open? (describes X)? (descriptor Y)? comp ;
    type_definition: $ => seq(
      'type',
      field('name', $.identifier),
      optional(seq(':', field('supertype', $._type_name))),
      '=',
      optional('open'),
      optional(seq('describes', field('describes', $._type_name))),
      optional(seq('descriptor', field('descriptor', $._type_name))),
      field('body', $._composite_type),
      ';',
    ),

    rec_type: $ => seq('rec', '{', repeat($.type_definition), '}'),

    // type name = value_type ;   (a value-type alias, parser.mly's `type_alias`)
    type_alias: $ => seq(
      'type',
      field('name', $.identifier),
      '=',
      field('type', $._value_type),
      ';',
    ),

    // ---------------------------------------------------------------------
    // Expressions
    // ---------------------------------------------------------------------

    _expression: $ => choice(
      $._plaininstr,
      $._block_instruction,
      $.attributed_expression,
    ),

    // A hint attribute prefixing an expression takes the whole of it: the rule
    // carries the loosest precedence, so every operator extends the expression
    // under the attribute (parser.mly `expression: hint_attr expression` at
    // prec_block). Which attributes are hints, and where they may sit, is the
    // wax parser's semantic check, not the grammar's.
    inf: $ => 'inf',
    nan: $ => 'nan',

    path_expression: $ => prec(PREC.postfix, seq(
      field('root', $.identifier),
      '::',
      field('member', $.identifier),
    )),

    sequence_expression: $ => seq(
      '(',
      $._expression,
      ',',
      sepByTrailing(',', $._expression),
      ')',
    ),

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq('(',
      sepByTrailing(',', choice($.labelled_argument, $._expression)), ')'),

    // A labelled immediate argument of a memory access:
    // m.store32(p, v, offset: 16, align: 1), m.load8_lane(p, v, lane: 3).
    labelled_argument: $ => seq(
      // `tag` is a keyword (tag declarations) but also the label of a
      // switch's tag immediate (parser.mly argument).
      field('label', choice($.identifier, alias('tag', $.identifier))),
      ':', field('value', $._expression)),

    struct_expression: $ => prec(PREC.block, seq(
      '{',
      optional(choice(
        seq(field('base', $._struct_base), '|',
          sepByTrailing(',', $.field_initializer)),
        sepBy1Trailing(',', $.field_initializer),
      )),
      '}',
    )),

    // { x | .. } | { .. } | { descriptor(d) | .. }
    struct_default_expression: $ => prec(PREC.block, seq(
      '{',
      optional(seq(field('base', $._struct_base), '|')),
      '..',
      '}',
    )),

    _struct_base: $ => choice($._type_name, $.descriptor_operand),

    field_initializer: $ => choice(
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      field('name', $.identifier), // punning: {x} == {x: x}
    ),

    descriptor_operand: $ => seq('descriptor', '(', $._expression, ')'),

    // [ body ] | [ t | body ]
    tee_expression: $ => prec.right(PREC.assign, seq(
      field('name', $.identifier),
      ':=',
      field('value', $._expression),
    )),

    cast_expression: $ => prec.left(PREC.cast, seq(
      field('value', $._expression),
      'as',
      field('type', $._cast_type),
    )),

    cast_desc_expression: $ => prec.left(PREC.cast, seq(
      field('value', $._expression),
      'as',
      optional('?'),
      field('descriptor', $.descriptor_operand),
    )),

    test_expression: $ => prec.left(PREC.cast, seq(
      field('value', $._expression),
      'is',
      field('type', $.reference_type),
    )),

    struct_get_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression),
      '.',
      field('field', $.identifier),
    )),

    get_descriptor_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression),
      '.',
      'descriptor',
    )),

    array_get_expression: $ => prec(PREC.postfix, seq(
      field('array', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    // `a[i] = v` is a plaininstr, not a statement form (parser.mly ArraySet), so
    // it may also appear in expression position — as a sequence element, say.
    // Built on `array_get_expression` like `struct_set_expression` is on
    // `struct_get_expression`: the target has to reduce before the `=`, since the
    // postfix precedence of the access outranks the assignment.
    array_set_expression: $ => prec.right(PREC.assign, seq(
      field('target', $.array_get_expression),
      '=',
      field('value', $._expression),
    )),

    non_null_expression: $ => prec(PREC.postfix, seq($._expression, '!')),

    select_expression: $ => prec.right(PREC.ternary, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('!', '-', '+')),
      field('operand', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        // The compiler makes comparisons nonassoc (chaining is a type error);
        // tree-sitter has no nonassoc, so we accept chains as left-associative.
        [PREC.compare, choice('==', '!=', '<', '<s', '<u', '>', '>s', '>u',
          '<=', '<=s', '<=u', '>=', '>=s', '>=u'), 'left'],
        [PREC.or, '|', 'left'],
        [PREC.xor, '^', 'left'],
        [PREC.and, '&', 'left'],
        [PREC.shift, choice('<<', '>>s', '>>u'), 'left'],
        [PREC.add, choice('+', '-'), 'left'],
        [PREC.mul, choice('*', '/', '/s', '/u', '%s', '%u'), 'left'],
      ];
      return choice(...table.map(([p, op, assoc]) => {
        const rule = seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        );
        return assoc === 'left' ? prec.left(p, rule)
          : assoc === 'right' ? prec.right(p, rule)
            : prec(p, rule);
      }));
    },

    // Operand-carrying conditional branches (parser.mly's `branch_expr`).
    branch_expression: $ => prec.right(PREC.branch, seq(
      choice(
        seq('br_if', field('label', $.label), field('value', $._expression)),
        seq('br_on_null', field('label', $.label), field('value', $._expression)),
        seq('br_on_non_null', field('label', $.label), field('value', $._expression)),
        seq('br_on_cast', field('label', $.label),
          field('type', $.reference_type), field('value', $._expression)),
        seq('br_on_cast_fail', field('label', $.label),
          field('type', $.reference_type), field('value', $._expression)),
        seq('br_on_cast', field('label', $.label), optional('?'),
          field('descriptor', $.descriptor_operand), field('value', $._expression)),
        seq('br_on_cast_fail', field('label', $.label), optional('?'),
          field('descriptor', $.descriptor_operand), field('value', $._expression)),
      ),
    )),

    // Stack-switching / continuation ops. The resume family and switch are
    // method calls on the continuation reference and cont.new/cont.bind are
    // T:: paths (both parse via the generic call/path rules); only suspend
    // keeps a keyword form, plus the postfix `on` handler clause, which binds
    // like as/is (parser.mly on_clause / expression ON).
    suspend_expression: $ => seq('suspend', field('tag', $._type_name), $.argument_list),
    on_expression: $ => prec.left(PREC.cast, seq(
      $._expression, 'on', $.on_clauses)),

    on_clauses: $ => seq('[', sepByTrailing(',', $.on_clause), ']'),
    on_clause: $ => choice(
      seq(field('tag', $.identifier), '->', field('label', $.label)),
      // `switch` is a contextual identifier here (no longer a keyword).
      seq(field('tag', $.identifier), '->', 'switch'),
    ),

    // ---------------------------------------------------------------------
    // Statements & blocks
    // ---------------------------------------------------------------------

    block: $ => seq(optional($.block_label), $._braced_block),

    // The final ';' of a block is optional (a block's last statement may omit
    // it), so a bare trailing `_statement` (no ';') may follow the ';'-separated
    // items. Mirrors the wax grammar's `raw_statement_list -> statement
    // option(';' ...)` (src/lib-wax/parser.mly; ERROR-MESSAGES.md step 22). A
    // non-final non-block statement still needs its ';' (it can only be a
    // `_block_item`), so a genuinely missing internal ';' still fails to parse.
    _braced_block: $ => seq('{', repeat($._block_item), optional($._statement), '}'),

    block_label: $ => seq($.label, ':'),

    // A statement-level hint attribute is served by `attributed_expression`
    // appearing directly as a block item: a hinted block instruction keeps the
    // `;`-less form, and a hinted plain statement's `;` is absorbed by the
    // empty-statement item (parser.mly `raw_statement_list -> hint_attr
    // raw_statement_list`, which attaches the hint to the next item).
    // Statement-only forms (`let`, `=`, `return`, …) admit no attribute — the
    // wax parser rejects a hint there too.
    _statement: $ => choice(
      $._plaininstr,
      $.nop,
      $.unreachable,
      $.assignment_statement,
      $.compound_assignment_statement,
      $.discard_statement,
      $.let_statement,
      $.br_statement,
      $.br_table_statement,
      $.return_statement,
      $.throw_statement,
      $.throw_ref_statement,
      $.become_statement,
    ),

    nop: $ => 'nop',
    assignment_statement: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    compound_assignment_statement: $ => seq(
      field('name', $.identifier),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '/s=', '/u=', '%s=', '%u=',
        '&=', '|=', '^=', '<<=', '>>s=', '>>u=',
      )),
      field('value', $._expression),
    ),

    discard_statement: $ => seq(
      '_',
      optional(seq(':', field('type', $._value_type))),
      '=',
      field('value', $._expression),
    ),

    let_statement: $ => seq(
      'let',
      choice(
        seq(field('pattern', $._pattern),
          optional(seq(':', field('type', $._value_type))),
          optional(seq('=', field('value', $._expression)))),
        seq('(', sepByTrailing(',', $.let_binding), ')',
          optional(seq('=', field('value', $._expression)))),
      ),
    ),

    let_binding: $ => seq(
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._value_type))),
    ),

    _pattern: $ => choice($.identifier, alias('_', $.wildcard)),

    _data_name: $ => choice(alias('_', $.wildcard), $.identifier),
