tree-sitter-wax/test/corpus/comments.txt
==================
nested block comment
==================

fn f() { /* a /* b */ c */ nop; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (block_comment)
      (nop))))

==================
line comment
==================

fn f() { nop; // trailing
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (nop)
      (line_comment))))
