tree-sitter-wax/test/corpus/expressions.txt
==================
precedence add mul
==================

fn f() { a + b * c; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (binary_expression
        left: (identifier)
        right: (binary_expression
          left: (identifier)
          right: (identifier))))))

==================
comparison and shift
==================

fn f() { a << b == c; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier)))))

==================
unary and postfix
==================

fn f() { !a.b!; -x; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (unary_expression
        operand: (non_null_expression
          (struct_get_expression
            value: (identifier)
            field: (identifier))))
      (unary_expression
        operand: (identifier)))))

==================
ternary
==================

fn f() { c ? a : b; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (select_expression
        condition: (identifier)
        consequence: (identifier)
        alternative: (identifier)))))

==================
cast and test
==================

fn f() { x as i64; y is &Cat; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (cast_expression
        value: (identifier)
        type: (primitive_type
          (identifier)))
      (test_expression
        value: (identifier)
        type: (reference_type
          heap: (type_identifier))))))

==================
struct and field
==================

fn f() { {P| x: 1, y}.x; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (struct_get_expression
        value: (struct_expression
          base: (type_identifier)
          (field_initializer
            name: (identifier)
            value: (integer_literal))
          (field_initializer
            name: (identifier)))
        field: (identifier)))))

==================
call and index
==================

fn f() { g(a, b)[i]; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (array_get_expression
        array: (call_expression
          function: (identifier)
          arguments: (argument_list
            (identifier)
            (identifier)))
        index: (identifier)))))


==================
labelled arguments
==================

fn f() { m.store32(p, v, offset: 16, align: 1); }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (call_expression
        function: (struct_get_expression
          value: (identifier)
          field: (identifier))
        arguments: (argument_list
          (identifier)
          (identifier)
          (labelled_argument
            label: (identifier)
            value: (integer_literal))
          (labelled_argument
            label: (identifier)
            value: (integer_literal)))))))

===============================
array element assignment
===============================

fn f(a: &A, x: i32) { a[0] = 1; _ = (a[1] = x, x); }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (reference_type
          heap: (type_identifier)))
      (parameter
        name: (identifier)
        type: (primitive_type
          (identifier))))
    body: (block
      (array_set_expression
        target: (array_get_expression
          array: (identifier)
          index: (integer_literal))
        value: (integer_literal))
      (discard_statement
        value: (sequence_expression
          (array_set_expression
            target: (array_get_expression
              array: (identifier)
              index: (integer_literal))
            value: (identifier))
          (identifier))))))
