tree-sitter-wax/test/corpus/stack-switching.txt
==================
cont.new (T:: constructor)
==================

fn f() { k::new(g); }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (call_expression
        function: (path_expression
          root: (identifier)
          member: (identifier))
        arguments: (argument_list
          (identifier))))))

==================
cont.bind (T:: constructor)
==================

fn f() { k0::bind(x, c); }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (call_expression
        function: (path_expression
          root: (identifier)
          member: (identifier))
        arguments: (argument_list
          (identifier)
          (identifier))))))

==================
suspend
==================

fn f() { suspend e(v); }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (suspend_expression
        tag: (type_identifier)
        (argument_list
          (identifier))))))

==================
resume with on-clauses
==================

fn f() { c.resume(x) on [e -> 'h, x -> switch]; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (on_expression
        (call_expression
          function: (struct_get_expression
            value: (identifier)
            field: (identifier))
          arguments: (argument_list
            (identifier)))
        (on_clauses
          (on_clause
            tag: (identifier)
            label: (label
              name: (identifier)))
          (on_clause
            tag: (identifier)))))))

==================
resume_throw with tag payload, empty on-clauses
==================

fn f() { c.resume_throw(e(p)) on []; }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (on_expression
        (call_expression
          function: (struct_get_expression
            value: (identifier)
            field: (identifier))
          arguments: (argument_list
            (call_expression
              function: (identifier)
              arguments: (argument_list
                (identifier)))))
        (on_clauses)))))

==================
switch with tag immediate
==================

fn f() { c.switch(x, tag: e); }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (call_expression
        function: (struct_get_expression
          value: (identifier)
          field: (identifier))
        arguments: (argument_list
          (identifier)
          (labelled_argument
            label: (identifier)
            value: (identifier)))))))
